--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 
-logging.level.com.marceljsh.binarfud=TRACE
+logging.level.com.synrgy.setara=TRACE
 
 security.jwt.token.secret-key=${JWT_SECRET}
 
