add feat top-up, fix login, change update to create-drop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,16 +8,18 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 spring.jackson.property-naming-strategy=SNAKE_CASE
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${DB_UPDATE}
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 
-logging.level.com.marceljsh.binarfud=TRACE
+logging.level.com.synrgy.setara=TRACE
 
 security.jwt.token.secret-key=${JWT_SECRET}
 
