--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!--	RandomString 	-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+
 		<!--	jwt		-->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -83,6 +90,7 @@
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
