--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,11 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.show-sql=true
+spring.datasource.hikari.data-source-properties.cachePrepStmts=false
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
 #spring.jpa.properties.hibernate.show_sql=true
 
 logging.level.com.synrgy.setara=TRACE
