--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,5 @@ security.jwt.token.expiration=86400000
 server.port=8080
 springdoc.api-docs.path=/v1/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-openapi.dev-url=http://localhost:8080
-openapi.prod-url=https://setara.com
+openapi.dev-url=setara-api-service-production.up.railway.app
+openapi.prod-url=setara-api-service-production.up.railway.app
