--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ logging.level.com.synrgy.setara=TRACE
 
 security.jwt.token.secret-key=${JWT_SECRET}
 security.jwt.token.expiration=${JWT_EXPIRATION}
+allowed.origin = *
 
 server.port=${APP_PORT}
 
