add allowed.origin = * in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,7 @@ logging.level.com.synrgy.setara=TRACE
 
 security.jwt.token.secret-key=${JWT_SECRET}
 security.jwt.token.expiration=${JWT_EXPIRATION}
+allowed.origin = *
 
 server.port=${APP_PORT}
 springdoc.api-docs.path=${API_DOCS}
