--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,4 +39,4 @@ server.port=${APP_PORT}
 springdoc.api-docs.path=${API_DOCS}
 springdoc.swagger-ui.path=${API_DOCS_HTML}
 
-openapi.prod-url=${PROD_URL}
+openapi.prod-url=https://setara-api-service-production.up.railway.app
