add spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true spring.jpa.properties.hibernate.prepare_sql=true spring.jpa.properties.hibernate.query.plan_cache_max_size=2048 spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
+spring.jpa.properties.hibernate.prepare_sql=true
+spring.jpa.properties.hibernate.query.plan_cache_max_size=2048
+spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
+
 spring.jpa.show-sql=true
 spring.datasource.hikari.data-source-properties.cachePrepStmts=false
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
