--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.idle-timeout=60000
 spring.datasource.hikari.max-lifetime=1800000
 
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
@@ -23,15 +27,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.properties.hibernate.jdbc.use_get_generated_keys=true
-spring.jpa.properties.hibernate.prepare_sql=true
-spring.jpa.properties.hibernate.query.plan_cache_max_size=2048
-spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
-
 spring.jpa.show-sql=true
-spring.datasource.hikari.data-source-properties.cachePrepStmts=false
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 
 logging.level.com.synrgy.setara=TRACE
