--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ security.jwt.token.expiration=${JWT_EXPIRATION}
 allowed.origin = *
 
 server.port=${APP_PORT}
-springdoc.api-docs.path=${API_DOCS}
-springdoc.swagger-ui.path=${API_DOCS_HTML}
+springdoc.api-docs.path=/v1/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
 openapi.prod-url=https://setara-api-service-production.up.railway.app
