[fix] refactor vendor and contact related stuff

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ springdoc.api-docs.path= ${API_DOCS}
 springdoc.swagger-ui.path=${API_DOCS_HTML}
 openapi.dev-url=${DEV_URL}
 openapi.prod-url=${PROD_URL}
+
+image.storage.path=images
