--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,5 +40,5 @@ allowed.origin = *
 
 springdoc.api-docs.path= ${API_DOCS}
 springdoc.swagger-ui.path=${API_DOCS_HTML}
-openapi.dev-url=${DEV_URL}
+#openapi.dev-url=${DEV_URL}
 openapi.prod-url=${PROD_URL}
