[refactor] finish all functionalities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,23 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
-
 spring.jpa.hibernate.ddl-auto=${DB_UPDATE}
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dynamic-update=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=false
 
-logging.level.com.synrgy.setara=TRACE
+logging.level.root=DEBUG
+logging.level.org.synrgy.setara=DEBUG
+logging.level.com.zaxxer.hikari=INFO
+logging.level.io.swagger.v3.core.converter=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type=WARN
+logging.level.org.postgresql=INFO
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.data.jpa=INFO
 
 security.jwt.token.secret-key=${JWT_SECRET}
 security.jwt.token.expiration=${JWT_EXPIRATION}
