--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 			<version>2.6.0</version>
 		</dependency>
 
-		<!-- Testing Libraries -->
+		<!-- Testing -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -131,6 +131,13 @@
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>3.9.0</version>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- Jasper Reports -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>7.0.0</version>
 		</dependency>
 	</dependencies>
 
