Add jrxml and generate mutation PDF endpoint

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,16 @@
 			<artifactId>jasperreports</artifactId>
 			<version>7.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>7.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-pdf</artifactId>
+			<version>7.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
